# cansi

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING-PROCEDURE.md  README.md  linux-test.sh  test-builder.xlsx
.github/workflows/: coverage.yml  rust.yml
benches/: benches.rs
notes/: Benchmarking.md
src/: categorise.rs  lib.rs  parsing.rs  tests.rs
tests/: api.rs
