[package]
name = "cansi"
description = "Catergorise ANSI - ANSI escape code parser and categoriser"
version = "2.0.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kurtlawrence/cansi"
repository = "https://github.com/kurtlawrence/cansi"
documentation = "https://docs.rs/cansi/"
readme = "README.md"
keywords = [ "ansi", "parsing", "terminal" ]
edition = "2018"

[dependencies]

[dev-dependencies]
criterion = "0.2"
colored = "1.7.0"

[[bench]]
name = "benches"
harness = false